# CodeCritique

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  codecritique-project-board.md  critique_report.html  dummy.py  implementation_plan.md.resolved  pyproject.toml  requirements.txt
.claude/: launch.json
.devcontainer/: devcontainer.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
code_critique/: cli.py  git_utils.py  report.py  runner.py
code_critique/checkers/: python_coverage.py  python_lint.py  python_security.py  python_types.py
src/critique/: app.py  cli.py  config.py  git_utils.py  paths.py  persistence.py  report.py  runner.py
src/critique/ai/: client.py  enricher.py  prompts.py  providers.py  schemas.py  synthesizer.py
src/critique/checkers/: ai_critic.py  base.py  coverage.py  lint.py  security.py  types.py
src/web/: package-lock.json
src/web/src/: App.jsx  data.js  index.css
src/web/src/components/: BackgroundBlobs.jsx  Dashboard.jsx  IssueDetail.jsx  Sidebar.jsx
tests/: conftest.py  test_ai_client.py  test_checkers.py  test_config.py  test_enricher.py  test_git_utils.py  test_persistence.py  test_runner.py  test_synthesizer.py  test_web.py
tests/fixtures/: buggy_logic.py  clean_code.py  security_holes.py  type_errors.py
web/: main.py  requirements.txt  start.ps1  test_endpoint.py
web/static/: index.html
