[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "critique"
version = "0.1.0"
description = "A native Code Critique tool for pre-push checks."
readme = "README.md"
authors = [
    { name = "User", email = "user@example.com" },
]
requires-python = ">=3.8, <3.13"
dependencies = [
    "typer[all]",
    "rich",
    "ruff",
    "mypy",
    "bandit",
    "pytest",
    "pytest-cov",
    "coverage",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
    "slowapi",
]

[project.scripts]
critique = "critique.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/critique"]
